--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -4,4 +4,5 @@
     <string name="enviar">Enviar</string>
     <string name="mensagem">Mensagem</string>
     <string name="mensagem_recebida">Mensagem recebida</string>
+    <string name="mensagem_vazia">Introduza uma mensagem</string>
 </resources>
